--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,3 +11,5 @@ services:
       - ./src:/app/src
     ports:
       - 4000:3000
+    environment:
+      - "REACT_APP_WEB_API_URL=http://localhost"
